--- a/pastelka/scss/_pagination.scss
+++ b/pastelka/scss/_pagination.scss
@@ -22,6 +22,10 @@
     border: 1px solid $primeColor!important;
     background: $white!important;
   }
+  &.active{
+    border: 1px solid $primeColor!important;
+    background: $white!important;
+  }
 }
 
 .paginationLinkPrevious,
