--- a/pastelka/css/main.css
+++ b/pastelka/css/main.css
@@ -66,10 +66,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .catalogProductCartBtn:hover, .productInfoBtn:hover, .footerRightChatBtn:hover {
   color: #e6e6e6;
   background: #9fc441;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 
 /*------------------ Fonts ------------------*/
@@ -395,10 +391,6 @@ a {
 a:hover {
   color: #e6e6e6;
   text-decoration: none;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 a:focus {
   text-decoration: none;
@@ -425,10 +417,6 @@ img {
   border: 2px solid #99b84d;
   color: #ffffff;
   background: #99b84d;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 
 .wrapTitleDecor {
@@ -517,6 +505,10 @@ img {
   font-size: 1.125em;
 }
 .paginationLink:hover {
+  border: 1px solid #b6258f !important;
+  background: #ffffff !important;
+}
+.paginationLink.active {
   border: 1px solid #b6258f !important;
   background: #ffffff !important;
 }
@@ -1403,13 +1395,13 @@ All this is done for any sub-level being entered.
 
 .dl-menuwrapper li > a:after,
 .dl-menuwrapper li.dl-back:after {
-  color: #c0429e;
+  color: #7e3c9f;
 }
 
 .mobileMenuItem,
 .mobileSubMenuItem {
   border-bottom: 1px solid #ffffff;
-  background: #debcf8;
+  background: #9951bd;
 }
 .mobileMenuItem:last-child,
 .mobileSubMenuItem:last-child {
@@ -1417,7 +1409,8 @@ All this is done for any sub-level being entered.
 }
 
 .dl-back {
-  background: #d675bc;
+  background: #7e3c9f;
+  border-bottom: 1px solid #ffffff;
 }
 
 .dl-menuwrapper button:hover {
@@ -1732,10 +1725,6 @@ All this is done for any sub-level being entered.
 }
 .closeIcon [class^="icon-"]:hover {
   color: #888888;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 
 .wrapSearchResultImage {
@@ -1821,6 +1810,7 @@ All this is done for any sub-level being entered.
   padding: 0.9375em 0;
   width: 100%;
   min-height: 8.75em;
+  color: #ffffff;
 }
 .headerCategoryLink span {
   display: block;
@@ -1866,10 +1856,6 @@ All this is done for any sub-level being entered.
   box-sizing: border-box;
   background: #ffffff;
   position: absolute;
-  -moz-transition-duration: 2s;
-  -o-transition-duration: 2s;
-  -webkit-transition-duration: 2s;
-  transition-duration: 2s;
   z-index: 10;
 }
 
@@ -1969,6 +1955,86 @@ All this is done for any sub-level being entered.
   .searchResultImageInfo {
     width: 65%;
   }
+
+  .wrapHeaderBottom {
+    background: none;
+  }
+
+  .headerBottom {
+    background: #debcf8 url("../image/bgPink.png") repeat;
+  }
+
+  .headerCategoryLink {
+    min-height: 100%;
+  }
+
+  .headerCategoryLink [class^="icon-"] {
+    display: none;
+  }
+
+  [class^="headerCategoryItem"] .headerCategorySubList {
+    background: #f2e5fd;
+    position: relative;
+    width: 100%;
+  }
+
+  .headerCategorySubListLeft {
+    width: 100%;
+    float: none;
+  }
+
+  .headerCategoryLink {
+    padding: 0.625em;
+    overflow: hidden;
+  }
+  .headerCategoryLink span {
+    display: inline;
+  }
+  .headerCategoryLink .caret {
+    display: inline-block;
+    width: 0;
+    height: 0;
+    color: #b6258f;
+    margin-left: 5px;
+    margin-top: 8px;
+    vertical-align: middle;
+    border-top: 6px solid;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    float: right;
+  }
+  .headerCategoryLink:hover .caret {
+    color: #ffffff;
+  }
+
+  .headerCategoryLinkTitle {
+    float: left;
+  }
+
+  .headerCategoryItem {
+    width: 100%;
+    float: none;
+    border-bottom: 1px solid #ffffff;
+  }
+  .headerCategoryItem:hover > .headerCategorySubList {
+    display: none;
+  }
+  .headerCategoryItem.open {
+    background: #b6258f;
+  }
+  .headerCategoryItem.open .headerCategoryLinkTitle {
+    color: #ffffff;
+  }
+  .headerCategoryItem.open .caret {
+    border-top: none;
+    border-bottom: 6px solid;
+    border-right: 6px solid transparent;
+    border-left: 6px solid transparent;
+    color: #ffffff;
+  }
+  .headerCategoryItem.open > .headerCategorySubList {
+    display: block;
+  }
 }
 @media (max-width: 768px) {
   .wrapSearchResultImage {
@@ -2016,6 +2082,11 @@ All this is done for any sub-level being entered.
 
   .infoCartNumber {
     font-size: 1em;
+  }
+}
+@media (min-width: 992px) {
+  .caret {
+    display: none !important;
   }
 }
 /*------------------ Banners and slider ------------------*/
@@ -2073,10 +2144,6 @@ All this is done for any sub-level being entered.
 }
 .carousel-control:hover [class^="icon-"] {
   color: #ffffff;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 
 .carousel-control:hover {
@@ -2109,10 +2176,6 @@ All this is done for any sub-level being entered.
 }
 .specialOffer:hover {
   border: 1px solid #d675bc;
-  -moz-transition-duration: 1s;
-  -o-transition-duration: 1s;
-  -webkit-transition-duration: 1s;
-  transition-duration: 1s;
 }
 @media (max-width: 768px) {
   .specialOffer {
@@ -2406,10 +2469,6 @@ All this is done for any sub-level being entered.
 }
 
 .filterItem input[type='checkbox']:checked + label > .itemPseudoCheckbox {
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
   background: #9951bd;
 }
 
@@ -2429,10 +2488,6 @@ All this is done for any sub-level being entered.
 }
 
 .filterItem input[type='checkbox']:checked + label > .itemColorPseudoCheckbox {
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
   border-top: 3px inset #D38CF7;
   border-right: 3px inset #9951bd;
   border-bottom: 3px inset #9951bd;
@@ -2574,18 +2629,10 @@ All this is done for any sub-level being entered.
 }
 
 .filterManufacturerItem input[type='checkbox']:checked + .filterManufacturerLabel {
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
   background: #9951bd;
   color: #ffffff;
 }
 .filterManufacturerItem input[type='checkbox']:checked + .filterManufacturerLabel .filterManufacturerCountry {
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  -webkit-transition-duration: 0.5s;
-  transition-duration: 0.5s;
   color: #ffffff;
 }
 
@@ -2593,6 +2640,13 @@ All this is done for any sub-level being entered.
   font-size: 0.875em;
   padding: 0.21429em;
   display: inline-block;
+}
+.filterManufacturerLabel:hover {
+  background: #ba88d2;
+  color: #ffffff;
+}
+.filterManufacturerLabel:hover .filterManufacturerCountry {
+  color: #ffffff;
 }
 
 .filterManufacturerCountry {
@@ -2929,6 +2983,7 @@ All this is done for any sub-level being entered.
 }
 .item.list-group-item .productInfoCell2 {
   width: 33%;
+  min-width: 90px;
 }
 .item.list-group-item .productInfoCell3 {
   width: 28%;
@@ -2987,10 +3042,6 @@ All this is done for any sub-level being entered.
     z-index: 100;
     border: 1px solid #b6258f;
     box-sizing: border-box;
-    -moz-transition-duration: 1s;
-    -o-transition-duration: 1s;
-    -webkit-transition-duration: 1s;
-    transition-duration: 1s;
   }
   .catalogProduct:hover .catalogProductInfoGridShow {
     display: block;
@@ -3081,6 +3132,10 @@ All this is done for any sub-level being entered.
   }
   .productInfoInCell:last-child {
     width: 100%;
+  }
+
+  .productInfoCartBtn {
+    width: 100px;
   }
 }
 /*------------------ Footer ------------------*/
