--- a/pastelka/scss/_header.scss
+++ b/pastelka/scss/_header.scss
@@ -41,7 +41,7 @@
 }
 
 .dl-back{
-  background: darken($purple1, 10%);
+  background: darken($green2, 10%);
   border-bottom: 1px solid $white;
 }
 
