--- a/pastelka/scss/_productCard.scss
+++ b/pastelka/scss/_productCard.scss
@@ -6,6 +6,8 @@
   }
 }
 
+/*------------------ Product-card-top ------------------*/
+
 .productCardRowLink{
   color: $gray2;
   display: block;
@@ -13,14 +15,6 @@
     background: $gray5;
     color: $gray2;
   }
-}
-
-.wrapProductCard{
-
-}
-
-.productCardRow{
-
 }
 
 .productCardCell{
@@ -41,3 +35,14 @@
     width: 50%;
   }
 }
+
+
+
+
+
+
+
+
+
+
+/*------------------ Product-card-bottom ------------------*/
