--- a/pastelka/scss/main.scss
+++ b/pastelka/scss/main.scss
@@ -5,6 +5,7 @@
 @import "placeholders";
 @import "mixins";
 @import "fonts";
+@import "gallery";
 @import "global";
 @import "breadcrumbs";
 @import "pagination";
